--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Inventures
+tagline: Impact Venture Capital Funds
 email: inventures@mymicroinvest.com
 description: >
   Inventures is the first European crowd-venturing impact fund,
@@ -6,7 +7,6 @@ description: >
   in early stage impact businesses.
 baseurl: ''
 url: 'https://www.inventures.fund'
-twitter_username: inventuresfund
 
 gems:
 exclude:
