--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: >
   in early stage impact businesses.
 baseurl: ''
 url: 'https://www.inventures.fund'
+twitter: '@inventuresfund'
 
 gems:
 exclude:
