Add design Board & Team

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: >
   in early stage impact businesses.
 baseurl: ''
 url: 'https://www.inventures.fund'
+phone: '+32 2 318 47 12'
 twitter: '@inventuresfund'
 
 gems:
