Fix HTTP URL in config

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   a venture capital firm based in Brussels, Belgium, investing
   in early stage impact businesses.
 baseurl: ''
-url: 'https://www.inventures.fund'
+url: 'http://inventures.fund'
 phone: '+32 2 318 47 12'
 twitter: '@inventuresfund'
 permalink: pretty
