Give Inventures its own email address

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Inventures
 tagline: Impact Venture Capital Funds
-email: inventures@mymicroinvest.com
+email: info@inventures.fund
 description: >
   Inventures is the first European crowd-venturing impact fund,
   a venture capital firm based in Brussels, Belgium, investing
